<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_game_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lol_blue_light"
            android:fontFamily="@font/audiowide"
            android:padding="12dp"
            android:text="@string/game_info"
            android:textColor="@color/lol_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/lol_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_info_header" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_summoner_spell"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:scaleType="center"
            android:src="@drawable/summoner_spells"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_summoner_spell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_summoner_spell"
            app:layout_constraintEnd_toEndOf="@id/iv_summoner_spell"
            app:layout_constraintStart_toStartOf="@id/iv_summoner_spell"
            app:layout_constraintTop_toTopOf="@id/iv_summoner_spell">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/summoner_spell"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_items"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="center"
            android:src="@drawable/items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_summoner_spell"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_items"
            app:layout_constraintEnd_toEndOf="@id/iv_items"
            app:layout_constraintStart_toStartOf="@id/iv_items"
            app:layout_constraintTop_toTopOf="@id/iv_items">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/items"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:scaleType="center"
            android:src="@drawable/profileicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_items"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_profile_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_icon"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_icon"
            app:layout_constraintStart_toStartOf="@id/iv_profile_icon"
            app:layout_constraintTop_toTopOf="@id/iv_profile_icon">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/profile_icons"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_ranks"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:src="@drawable/ranks"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_profile_icon"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_ranks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_ranks"
            app:layout_constraintEnd_toEndOf="@id/iv_ranks"
            app:layout_constraintStart_toStartOf="@id/iv_ranks"
            app:layout_constraintTop_toTopOf="@id/iv_ranks">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/ranks"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_maps"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:src="@drawable/maps"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_ranks"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_maps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_maps"
            app:layout_constraintEnd_toEndOf="@id/iv_maps"
            app:layout_constraintStart_toStartOf="@id/iv_maps"
            app:layout_constraintTop_toTopOf="@id/iv_maps">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/maps"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_game_modes"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:src="@drawable/game_modes"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_maps"
            app:shapeAppearanceOverlay="@style/RadiusImageView" />

        <FrameLayout
            android:id="@+id/fl_game_modes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#73FFFFFF"
            android:backgroundTint="@color/lol_blue_light"
            app:layout_constraintBottom_toBottomOf="@id/iv_game_modes"
            app:layout_constraintEnd_toEndOf="@id/iv_game_modes"
            app:layout_constraintStart_toStartOf="@id/iv_game_modes"
            app:layout_constraintTop_toTopOf="@id/iv_game_modes">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_background"
                android:backgroundTint="#33FFFFFF"
                android:fontFamily="@font/audiowide"
                android:padding="24dp"
                android:text="@string/game_modes"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>