<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/gradient_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_lol" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_blue"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/league_of_legends"
            android:textColor="@color/lol_yellow"
            android:textSize="22sp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_header" />

        <View
            android:id="@+id/view_champ_top"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/lol_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_champ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_blue"
            android:fontFamily="@font/audiowide"
            android:padding="12dp"
            android:text="@string/champions"
            android:textColor="@color/lol_yellow"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_champ_top" />

        <View
            android:id="@+id/view_champ"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/lol_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_champ" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_champ"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_champ"
            tools:listitem="@layout/item_champion_home" />

        <TextView
            android:id="@+id/tv_champ_classes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_blue"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/audiowide"
            android:padding="12dp"
            android:text="@string/champions_classes"
            android:textColor="@color/lol_yellow"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_champ" />

        <View
            android:id="@+id/view_champ_classes"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/lol_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_champ_classes" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_champ_classes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@drawable/gradient_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_champ_classes"
            app:tabGravity="center"
            app:tabIconTint="@color/lol_yellow"
            app:tabIndicatorColor="@color/gray_tab"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabMode="scrollable"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_champ_classes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_blue_800_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_champ_classes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>